Reworked the input. Now every keystroke is sent to the temrinal. Fixed the asni code parsing,k now suppoerts, xterm and bash, with screen clearing, device control, bracketed pasting and cursor positioning. Started wotking on a visible cursor in the browser, and the cursor position support for the browser

--- a/public/style.css
+++ b/public/style.css
@@ -177,32 +177,6 @@ body {
     color: inherit;
 }
 
-#terminal_text_input {
-    position: fixed;
-
-    top: 0px;
-    left: 0px;
-
-    margin: 0px;
-    padding: 0px;
-
-    font-size: var(--terminal-font);
-    font-family: var(--terminal-font-size);
-
-    /*background-color: transparent;
-    color: transparent;
-    border: none;
-    outline: none;
-
-    pointer-events: none;
-    user-select: none;*/
-}
-
-#terminal_text_input::selection {
-    background-color: transparent;
-    color: transparent;
-}
-
 /* Right-click menu */
 .contextmenu {
     z-index: 100;
